[FIX] website: fix facebook snippet broken on mobile
Since October 2024, the Facebook mobile site (m.facebook.com) uses an
'X-Frame-Options' header set to 'deny', preventing iframe embedding
across different domains. This header enforces a security policy
restricting cross-origin access to the content.
Meta has not provided any communication regarding this change. Until it
is resolved, we have no choice but to hide the iframe on mobile to
prevent users from seeing a "unavailable content" icon.

Steps to reproduce:

- In website edit mode.
- Drag and drop the "Facebook" snippet into the footer.
- Save the page.
- Open the dev tools and enable the mobile preview of the dev tools.
- Refresh the page.
- Bug: The "Facebook" snippet crashes.

More info about the issue: https://developers.facebook.com/community/threads/550478830783215/

opw-4302563
opw-4309180
opw-4222359
opw-4277045

closes odoo/odoo#187815

X-original-commit: 588f910da03d6284a57c2fab8fd042ef3169666f

--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -2563,3 +2563,18 @@ input[value*="data-oe-translation-initial-sha"] {
 .o_dropdown_without_offset {
     transform: none !important;
 }
+
+// o_facebook_page (Facebook page plugin)
+
+// Since October 2024, the Facebook mobile site (m.facebook.com) uses an
+// 'X-Frame-Options' header set to 'deny', preventing iframe embedding across
+// different domains. This header enforces a security policy restricting
+// cross-origin access to the content.
+// Meta has not provided any communication regarding this change. Until it is
+// resolved, we have no choice but to hide the iframe on mobile to prevent users
+// from seeing a "unavailable content" icon.
+@include media-breakpoint-down(md) {
+    .o_facebook_page {
+        display: none;
+    }
+}
